# serenity

Base/etc/: SystemServer.ini
Tests/LibCore/: CMakeLists.txt  TestLibCoreChronExpression.cpp
Userland/Applications/: CMakeLists.txt
Userland/Applications/Assistant/: CMakeLists.txt  Lexer.h  Token.cpp  Token.h
Userland/Applications/PasswordManager/: CMakeLists.txt  EditPasswordDialog.cpp  EditPasswordDialog.gml  EditPasswordDialog.h  PasswordDatabaseModel.cpp  PasswordDatabaseModel.h  PasswordGenerator.cpp  PasswordGenerator.h  PasswordManagerWidget.cpp  PasswordManagerWidget.h  PasswordManagerWindow.gml  main.cpp
Userland/Applications/TaskbarSettings/: CMakeLists.txt  QuickLaunchSettings.gml  QuickLaunchSettingsWidget.cpp  QuickLaunchSettingsWidget.h  main.cpp
Userland/Libraries/: CMakeLists.txt
Userland/Libraries/LibChron/: CMakeLists.txt  ChronClient.cpp  ChronClient.h
Userland/Libraries/LibCore/: CMakeLists.txt  ChronExpression.cpp  ChronExpression.h
Userland/Services/: CMakeLists.txt
Userland/Services/ChronServer/: CMakeLists.txt  ChronClient.ipc  ChronServer.ipc  ChronTask.cpp  ChronTask.h  ChronTaskIdentifier.h  ClientConnection.cpp  ClientConnection.h  main.cpp
